--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/branati/BootCamp-gostack-conceitos-nodejs.git"
+  },
+  "author": "Renato Cunha",
+  "bugs": {
+    "url": "https://github.com/branati/BootCamp-gostack-conceitos-nodejs/issues"
+  },
+  "homepage": "https://github.com/branati/BootCamp-gostack-conceitos-nodejs#readme",
+  "description": ""
 }
